# JSOS

./: .gitignore  3_11_a_plan.md  CHANGELOG.md  OS_IMPLEMENTATION.md  README.md  agents.md  build-debug.txt  build-log.txt  build-out.txt  docker-compose.yml  full_plan.md  jit_plan.md  jsos.code-workspace  jsruntime_HEAD.ts  package.json  setup.bat  setup.sh  test-bundle.js  test-windows.ps1  test-wsl.sh
.github/workflows/: ci.yml
chromium/ui/ozone/platform/jsos/: BUILD.gn  jsos_event_source.cc  jsos_event_source.h  jsos_surface_factory.cc  jsos_surface_factory.h  jsos_window.cc  jsos_window.h  ozone_platform_jsos.cc  ozone_platform_jsos.h
docker/: build.Dockerfile  test.Dockerfile  toolchain.Dockerfile
docs/: 1000-things.md  LICENSES.md  PLAN.md  README.md  architecture-overview.md  architecture.md  before_jit_os_updates.md  browser-audit.md  browser-engine-audit.md  browser-internals.md  browser-prd.md  browser-rendering-plan.md  build.md  contributing.md  deployment.md  design-system.md  dev-guide.md  filesystem-layout.md  filesystem.md  future.md  getting-started.md  internals.md  jit-everywhere-plan.md  jit-unrolled-plan.md  kernel-api-reference.md  kernel-api.md  network-internals.md  playground.html  pplan.md  repl.md  review-jit-desktop-2.md  sdk-prd.md  security.md  sys-api-reference.md
docs/archive/: README.md  browser-plan.md  browser-runtime-audit.md  remaining.md  solidification-plan.md
iso/: grub-uefi.cfg  grub.cfg
scripts/: build-iso-noXorriso.sh  build-uefi-image.sh  build-wasm.js  build.sh  bundle-es5.js  bundle-esbuild.js  bundle-hybrid.js  bundle-simple.js  dump-offsets.sh  embed-js.js  embed-js.sh  embed-rom.js  extract-branch-hook.sh  extract-opcodes.py  fix-duplicate.ps1  mark-confirmed.ps1  parse-pcap.ps1  patch-jsruntime.ps1  patch-jsruntime2.ps1  patch-jsruntime3.ps1  patch-jsruntime4.ps1  patch-jsruntime5.ps1  patch-jsruntime6.ps1  patch-jsruntime7.ps1  patch-jsruntime8.ps1  patch-jsruntime9.ps1  patch-urlpattern.ps1  patch-urlpattern2.ps1  probe-i686.c  probe-offsets.c  probe-struct.c  read-branch-code.sh  read-hook-point.sh  run-probe.sh  screenshot.ps1  test-interactive.sh  test.sh
test-output/: build-out.txt  capture.pcap  gap-analysis.txt  google-test.txt  google-test2.txt  google-test3.txt  google-test4.txt  google-test5.txt  google-test6.txt  google-test7.txt  google.html  latest-perf.txt  latest-test.txt  perf-headless.txt  perf-test.txt  quickjs-fix-test.txt  screenshot-run.txt  screenshot.ppm  script2.js  test7-fresh.txt
(+322 files in other folders)
